Prog-209-HW-4-objects

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 <br><br>
 <label for="whichPerson">Total Calories:</label>
-<input name="whichPerson" id="whichPerson" /><br>
-
+<output name="whichPerson" id="whichPerson">
+<input type="whichPerson" value="678">
 
 <script type="text/javascript" src="script.js"></script>
 </body>
