--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <input name="Calories" id="Calories" /> <br>
     
       <!-- here we submit to a local js file -->
-    <input type="submit" value="Submit" onclick="formSubmitEvent()">
+    <button type="submit" value="Submit" onclick="formSubmitEvent()">Submit</button>
     
     </fieldset>
 </form>
 
 <br><br>
-<label for="whichPerson">Total Calories:</label>
-<output name="whichPerson" id="whichPerson">
-<input type="whichPerson" value="678">
+<label for="TotalofCalories">Total Calories:</label>
+<input name="TotalofCalories" id="TotalofCalories"></br>
+
 
 <script type="text/javascript" src="script.js"></script>
 </body>
